--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<a class="nav-link" href="http://www.gmail.com" target="_blank">Gmail</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" target="_blank">Link</a>
+							<a class="nav-link" href="http://www.facebook.com" target="_blank">FB</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#" target="_blank">Link</a>
