--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="http://www.gmail.com" target="_blank">Gmail</a>
+							<a class="nav-link" href="https://mail.google.com" target="_blank">Gmail</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="http://www.facebook.com" target="_blank">FB</a>
@@ -102,7 +102,14 @@
 						</section><!-- column -->
 						<section class="col-md-3">
 
-              <h4>WGBH</h4>
+              <h4>WGBH Work</h4>
+              <div class="list-group">
+                <a href="http://rare.wpengine.com/" class="list-group-item list-group-item-action" target="_blank">RARE Dev</a>
+                <a href="http://masterpiece.wgbhdigital.org/" class="list-group-item list-group-item-action" target="_blank">Masterpiece Dev</a>
+                <a href="http://woodworksboston.com/" class="list-group-item list-group-item-action" target="_blank">WoodWorks</a>
+              </div>
+
+							<h4>WGBH Work</h4>
               <div class="list-group">
                 <a href="http://rare.wpengine.com/" class="list-group-item list-group-item-action" target="_blank">RARE Dev</a>
                 <a href="http://masterpiece.wgbhdigital.org/" class="list-group-item list-group-item-action" target="_blank">Masterpiece Dev</a>
