additions to index

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
 			<div id="main" class="container-fluid">
 				<div class="container">
+
 					<div class="row">
             <section class="col-md-3">
 
@@ -87,6 +88,7 @@
 								<a href="http://www.cssmatic.com/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Graident Generator</a>
 								<a href="http://css3generator.com/" class="list-group-item list-group-item-action" target="_blank">CSS3 Generator</a>
 								<a href="http://www.cssarrowplease.com/" class="list-group-item list-group-item-action" target="_blank">CSS Arrow Please!</a>
+								<a href="https://owlcarousel2.github.io/OwlCarousel2/" class="list-group-item list-group-item-action" target="_blank">OWL Carousel</a>
               </div>
 
 						</section><!-- column -->
@@ -102,11 +104,13 @@
 						</section><!-- column -->
 						<section class="col-md-3">
 
-              <h4>WGBH Work</h4>
+              <h4>WGBH Stuffs</h4>
               <div class="list-group">
-                <a href="http://rare.wpengine.com/" class="list-group-item list-group-item-action" target="_blank">RARE Dev</a>
-                <a href="http://masterpiece.wgbhdigital.org/" class="list-group-item list-group-item-action" target="_blank">Masterpiece Dev</a>
-                <a href="http://woodworksboston.com/" class="list-group-item list-group-item-action" target="_blank">WoodWorks</a>
+                <a href="https://atlas.wgbh.org/confluence/display/DIGITAL/WGBH+Digital+Home" class="list-group-item list-group-item-action" target="_blank">WGBH Digital Home</a>
+                <a href="https://wgbh.okta.com/app/workday" class="list-group-item list-group-item-action" target="_blank">WorkDay</a>
+                <a href="https://atlas.wgbh.org/jira/secure/BrowseProjects.jspa" class="list-group-item list-group-item-action" target="_blank">Jira</a>
+								<a href="https://atlas.wgbh.org/stash/projects" class="list-group-item list-group-item-action" target="_blank">Stash</a>
+								<a href="https://atlas.wgbh.org/jira/projects/BOFH/summary" class="list-group-item list-group-item-action" target="_blank">SysOps</a>
               </div>
 
 							<h4>WGBH Work</h4>
@@ -118,6 +122,62 @@
 
 						</section><!-- column -->
 					</div><!-- row -->
+
+					<div class="row">
+            <section class="col-md-12">
+
+							<div id="accordion" role="tablist" aria-multiselectable="true">
+
+								<!-- Accordion Element-->
+								<div class="card">
+							    <div class="card-header" role="tab" id="htmltemplate">
+							      <h5 class="mb-0">
+							        <a data-toggle="collapse" data-parent="#accordion" href="#colapOne" aria-expanded="false" aria-controls="colapOne">
+							          HTML Template
+							        </a>
+							      </h5>
+							    </div>
+
+							    <div id="colapOne" class="collapse" role="tabpanel" aria-labelledby="htmltemplate">
+							      <div class="card-block">
+
+											<textarea class="form-control" id="html" style="height:300px;"></textarea><!-- Closing Textarea -->
+
+							      </div>
+							    </div>
+							  </div><!-- Accordion Element-->
+
+								<!-- Accordion Element-->
+								<div class="card">
+							    <div class="card-header" role="tab" id="fontstack">
+							      <h5 class="mb-0">
+							        <a data-toggle="collapse" data-parent="#accordion" href="#colapTwo" aria-expanded="false" aria-controls="colapTwo">
+							          CSS Font Stacks
+							        </a>
+							      </h5>
+							    </div>
+
+							    <div id="colapTwo" class="collapse" role="tabpanel" aria-labelledby="fontstack">
+							      <div class="card-block">
+
+											<code>font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;</code>
+											<br><br>
+											<code>font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;</code>
+											<br><br>
+											<code>font-family: Georgia, Times, "Times New Roman", serif;</code>
+											<br><br>
+											<code>font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;</code>
+							      </div>
+							    </div>
+							  </div><!-- Accordion Element-->
+
+							</div>
+
+
+						</section><!-- column -->
+					</div><!-- row -->
+
+
 				</div><!-- container -->
 			</div><!-- container-fluid -->
 
