added HTML Template

--- a/index.html
+++ b/index.html
@@ -141,7 +141,117 @@
 							    <div id="colapOne" class="collapse" role="tabpanel" aria-labelledby="htmltemplate">
 							      <div class="card-block">
 
-											<textarea class="form-control" id="html" style="height:300px;"></textarea><!-- Closing Textarea -->
+											<textarea class="form-control" id="html" style="height:300px;"><!doctype html>
+	<html lang="en">
+		<head>
+			<meta charset="utf-8">
+
+			<title>The HTML5 Template</title>
+			<meta name="description" content="The HTML5 Template">
+			<meta name="author" content="Hamiltopia">
+
+			<!-- Bootstrap --><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+			<!-- Font Awesome --><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"></link>
+			<!-- Custom Styles --><link rel="stylesheet" href="css/styles.css?v=1.0">
+
+			<!--[if lt IE 9]>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+			<![endif]-->
+		</head>
+
+		<body>
+
+			<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+				<div class="container">
+				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<a class="navbar-brand" href="#">Navbar</a>
+
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Link</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Link</a>
+						</li>
+					</ul>
+				</div>
+
+				</div><!-- container -->
+			</nav><!-- navbar -->
+
+			<header id="head" class="container-fluid">
+				<div class="container">
+					<div class="row">
+						<section class="col-md-12">
+
+							<h1>Hello</h1>
+							<p>This is where page content will go.</p>
+
+						</section><!-- column -->
+					</div><!-- row -->
+				</div><!-- container -->
+			</header><!-- container-fluid -->
+
+
+
+			<div id="main" class="container-fluid">
+				<div class="container">
+					<div class="row">
+						<section class="col-md-8">
+
+							<h1>Hello</h1>
+							<p>This is where page content will go.</p>
+
+						</section><!-- column -->
+						<aside class="col-md-4">
+
+							<h3>Hello</h3>
+							<p>This is where page content will go.</p>
+
+						</aside><!-- column -->
+					</div><!-- row -->
+				</div><!-- container -->
+			</div><!-- container-fluid -->
+
+			<div id="foot" class="container-fluid">
+				<div class="container">
+					<div class="row">
+						<section class="col-md-4">
+
+							<h3>Hello</h3>
+							<p>This is where page content will go.</p>
+
+						</section><!-- column -->
+						<section class="col-md-4">
+
+							<h3>Hello</h3>
+							<p>This is where page content will go.</p>
+
+						</section><!-- column -->
+						<section class="col-md-4">
+
+							<h3>Hello</h3>
+							<p>This is where page content will go.</p>
+
+						</section><!-- column -->
+					</div><!-- row -->
+				</div><!-- container -->
+			</div><!-- container-fluid -->
+
+			<!-- Javascript -->
+			<!-- jQuery --><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+			<!-- Bootstrap --><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+			<!-- Custom --><script src="js/scripts.js"></script>
+		</body>
+	</html>
+<!-- HTML Template Done --></textarea><!-- Closing Textarea -->
 
 							      </div>
 							    </div>
