--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <a href="https://v4-alpha.getbootstrap.com/getting-started/introduction/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
                 <a href="http://fontawesome.io/icons/" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
                 <a href="http://www.cssfontstack.com/" class="list-group-item list-group-item-action" target="_blank">CSS Font Stacks</a>
+								<a href="https://fonts.google.com/" class="list-group-item list-group-item-action" target="_blank">Google Fonts</a>
 								<a href="https://uigradients.com" class="list-group-item list-group-item-action" target="_blank">UIGraidents</a>
 								<a href="http://www.cssmatic.com/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Graident Generator</a>
 								<a href="http://css3generator.com/" class="list-group-item list-group-item-action" target="_blank">CSS3 Generator</a>
@@ -281,7 +282,28 @@
 							    </div>
 							  </div><!-- Accordion Element-->
 
-							</div>
+								<!-- Accordion Element-->
+								<div class="card">
+							    <div class="card-header" role="tab" id="lorem">
+							      <h5 class="mb-0">
+							        <a data-toggle="collapse" data-parent="#accordion" href="#colapThree" aria-expanded="false" aria-controls="colapTwo">
+							          Lorem Ipsum
+							        </a>
+							      </h5>
+							    </div>
+
+							    <div id="colapThree" class="collapse" role="tabpanel" aria-labelledby="lorem">
+							      <div class="card-block">
+
+											<textarea class="form-control" id="html" style="height:300px;">Sed ut &laquo; &nbsp; &copy; &times; &reg; &#64; &amp; &deg; &nbsp; &raquo; perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+
+													Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</textarea><!-- Closing Textarea -->
+
+							      </div>
+							    </div>
+							  </div><!-- Accordion Element-->
+
+							</div><!-- END Accordion -->
 
 
 						</section><!-- column -->
