--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
 					<div class="row">
             <section class="col-md-12">
 
+							<h4>Copy & Paste</h4>
+
 							<div id="accordion" role="tablist" aria-multiselectable="true">
 
 								<!-- Accordion Element-->
@@ -142,7 +144,7 @@
 							    <div id="colapOne" class="collapse" role="tabpanel" aria-labelledby="htmltemplate">
 							      <div class="card-block">
 
-											<textarea class="form-control" id="html" style="height:300px;"><!doctype html>
+											<textarea class="form-control" id="html"><!doctype html>
 	<html lang="en">
 		<head>
 			<meta charset="utf-8">
@@ -295,9 +297,9 @@
 							    <div id="colapThree" class="collapse" role="tabpanel" aria-labelledby="lorem">
 							      <div class="card-block">
 
-											<textarea class="form-control" id="html" style="height:300px;">Sed ut &laquo; &nbsp; &copy; &times; &reg; &#64; &amp; &deg; &nbsp; &raquo; perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+											<textarea class="form-control" id="loremipsum">Sed ut &laquo; &nbsp; &copy; &times; &reg; &#64; &amp; &deg; &nbsp; &raquo; perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
 
-													Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</textarea><!-- Closing Textarea -->
+Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</textarea><!-- Closing Textarea -->
 
 							      </div>
 							    </div>
