--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8">
 
 			<title>Hamiltron</title>
-			<meta name="description" content="The HTML5 Template">
+			<meta name="description" content="Hamiltron">
 			<meta name="author" content="Hamiltopia">
 			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -40,7 +40,7 @@
 							<a class="nav-link" href="http://www.facebook.com" target="_blank">FB</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" target="_blank">Link</a>
+							<a class="nav-link" href="http://www.gizmodo.com" target="_blank">Gizmodo</a>
 						</li>
 					</ul>
 				</div>
@@ -290,7 +290,7 @@
 								<div class="card">
 							    <div class="card-header" role="tab" id="lorem">
 							      <h5 class="mb-0">
-							        <a data-toggle="collapse" data-parent="#accordion" href="#colapThree" aria-expanded="false" aria-controls="colapTwo">
+							        <a data-toggle="collapse" data-parent="#accordion" href="#colapThree" aria-expanded="false" aria-controls="colapThree">
 							          Lorem Ipsum
 							        </a>
 							      </h5>
@@ -302,6 +302,31 @@
 											<textarea class="form-control" id="loremipsum">Sed ut &laquo; &nbsp; &copy; &times; &reg; &#64; &amp; &deg; &nbsp; &raquo; perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
 
 Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</textarea><!-- Closing Textarea -->
+
+							      </div>
+							    </div>
+							  </div><!-- Accordion Element-->
+
+								<!-- Accordion Element-->
+								<div class="card">
+							    <div class="card-header" role="tab" id="type">
+							      <h5 class="mb-0">
+							        <a data-toggle="collapse" data-parent="#accordion" href="#colapFour" aria-expanded="false" aria-controls="colapFour">
+							          Typography
+							        </a>
+							      </h5>
+							    </div>
+
+							    <div id="colapFour" class="collapse" role="tabpanel" aria-labelledby="type">
+							      <div class="card-block">
+
+											<textarea class="form-control" id="loremipsum"><h1>Heading One</h1>
+<h2>Heading Two</h2>
+<h3>Heading Three</h3>
+<h4>Heading Four</h4>
+<h5>Heading Five</h5>
+<h6>Heading Six</h6>
+<p>Paragraph <strong>Bold</strong> <em>Italic</em> &laquo; &nbsp; &copy; &times; &reg; &#64; &amp; &deg; &nbsp; &raquo; enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p></textarea><!-- Closing Textarea -->
 
 							      </div>
 							    </div>
