--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<body>
 
-			<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+			<nav class="navbar navbar-toggleable-md navbar-light">
 				<div class="container">
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
 
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="https://mail.google.com" target="_blank">Gmail</a>
 						</li>
 						<li class="nav-item">
@@ -50,13 +50,9 @@
 
 			<header id="head" class="page-head container-fluid">
 				<div class="container">
-					<div class="row">
-						<section class="col-md-12">
 
-							<h1>Hamiltron</h1>
+					<h1>Hamiltron</h1>
 
-						</section><!-- column -->
-					</div><!-- row -->
 				</div><!-- container -->
 			</header><!-- container-fluid -->
 
