update to index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8">
 
-			<title>Hamiltron</title>
+			<title>Hamiltron.</title>
 			<meta name="description" content="Hamiltron">
 			<meta name="author" content="Hamiltopia">
 			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -51,7 +51,7 @@
 			<header id="head" class="page-head container-fluid">
 				<div class="container">
 
-					<h1>Hamiltron</h1>
+					<h1>Hamiltron.</h1>
 
 				</div><!-- container -->
 			</header><!-- container-fluid -->
@@ -71,6 +71,7 @@
                 <a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Colors</a>
                 <a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
                 <a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
+								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
               </div>
 
 						</section><!-- column -->
