update to index

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <h4>WGBH Stuffs</h4>
               <div class="list-group">
                 <a href="https://atlas.wgbh.org/confluence/display/DIGITAL/WGBH+Digital+Home" class="list-group-item list-group-item-action" target="_blank">WGBH Digital Home</a>
-                <a href="https://wgbh.okta.com/app/workday" class="list-group-item list-group-item-action" target="_blank">WorkDay</a>
+                <a href="https://wgbh.okta.com" class="list-group-item list-group-item-action" target="_blank">WorkDay</a>
                 <a href="https://atlas.wgbh.org/jira/secure/BrowseProjects.jspa" class="list-group-item list-group-item-action" target="_blank">Jira</a>
 								<a href="https://atlas.wgbh.org/stash/projects" class="list-group-item list-group-item-action" target="_blank">Stash</a>
 								<a href="https://atlas.wgbh.org/jira/projects/BOFH/summary" class="list-group-item list-group-item-action" target="_blank">SysOps</a>
