update to index

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 			<div id="main" class="container-fluid">
 				<div class="container">
 
+					<!-- A few of my favorite things -->
 					<div class="row">
             <section class="col-md-3">
 
@@ -69,25 +70,32 @@
                 <a href="http://codepen.io/hamiltopia/full/BQQRyB/" class="list-group-item list-group-item-action" target="_blank">Front End Palette</a>
                 <a href="http://codepen.io/hamiltopia/pen/rLoAmV" class="list-group-item list-group-item-action" target="_blank">Vars</a>
                 <a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Colors</a>
-                <a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
-                <a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
-								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
-              </div>
-
-						</section><!-- column -->
-						<section class="col-md-3">
-
-              <h4>More Tools</h4>
-              <div class="list-group">
-                <a href="https://v4-alpha.getbootstrap.com/getting-started/introduction/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
-                <a href="http://fontawesome.io/icons/" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
-                <a href="http://www.cssfontstack.com/" class="list-group-item list-group-item-action" target="_blank">CSS Font Stacks</a>
-								<a href="https://fonts.google.com/" class="list-group-item list-group-item-action" target="_blank">Google Fonts</a>
 								<a href="https://uigradients.com" class="list-group-item list-group-item-action" target="_blank">UIGraidents</a>
 								<a href="http://www.cssmatic.com/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Graident Generator</a>
 								<a href="http://css3generator.com/" class="list-group-item list-group-item-action" target="_blank">CSS3 Generator</a>
 								<a href="http://www.cssarrowplease.com/" class="list-group-item list-group-item-action" target="_blank">CSS Arrow Please!</a>
+              </div>
+
+
+						</section><!-- column -->
+						<section class="col-md-3">
+
+							<h4>More Tools</h4>
+              <div class="list-group">
+                <a href="https://v4-alpha.getbootstrap.com/getting-started/introduction/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
 								<a href="https://owlcarousel2.github.io/OwlCarousel2/" class="list-group-item list-group-item-action" target="_blank">OWL Carousel</a>
+								<a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
+								<a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
+								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
+
+              </div>
+
+							<h4>Font Tools</h4>
+              <div class="list-group">
+                <a href="https://v4-alpha.getbootstrap.com/content/typography/" class="list-group-item list-group-item-action" target="_blank">BS4 Typography</a>
+                <a href="http://fontawesome.io/icons/" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
+                <a href="http://www.cssfontstack.com/" class="list-group-item list-group-item-action" target="_blank">CSS Font Stacks</a>
+								<a href="https://fonts.google.com/" class="list-group-item list-group-item-action" target="_blank">Google Fonts</a>
               </div>
 
 						</section><!-- column -->
@@ -123,7 +131,7 @@
 					</div><!-- row -->
 
 					<div class="row">
-            <section class="col-md-12">
+            <section class="col-md-8">
 
 							<h4>Copy & Paste</h4>
 
@@ -329,10 +337,72 @@ Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, ad
 							    </div>
 							  </div><!-- Accordion Element-->
 
+
+								<!-- Accordion Element-->
+								<div class="card">
+							    <div class="card-header" role="tab" id="table">
+							      <h5 class="mb-0">
+							        <a data-toggle="collapse" data-parent="#accordion" href="#colapFive" aria-expanded="false" aria-controls="colapFive">
+							          Table
+							        </a>
+							      </h5>
+							    </div>
+
+							    <div id="colapFive" class="collapse" role="tabpanel" aria-labelledby="type">
+							      <div class="card-block">
+
+											<textarea class="form-control" id="htmltable"><table title="Table!" id="table-one" class="table table-striped">
+	<thead>
+		<tr>
+			<th>Head</th>
+			<th>Head</th>
+			<th>Head</th>
+		</tr>
+	</thead>
+	<tfoot>
+		<tr>
+			<td>Foot</td>
+			<td>Foot</td>
+			<td>Foot</td>
+		</tr>
+	</tfoot>
+	<tbody>
+		<tr>
+			<td>Body</td>
+			<td>Body</td>
+			<td>Body</td>
+		</tr>
+	</tbody>
+</table>
+</textarea><!-- Closing Textarea -->
+
+							      </div>
+							    </div>
+							  </div><!-- Accordion Element-->
+
 							</div><!-- END Accordion -->
 
 
 						</section><!-- column -->
+						<section class="col-md-4">
+
+							<h4>Figure Image</h4>
+
+							<figure class="figure-image">
+								<img src="https://unsplash.it/960/540?image=996" class="image" alt="This is an image from Unsplash" title="This is an image from Unsplash">
+								<figcaption>This is an image from Unsplash</figcaption>
+							</figure>
+
+
+							<br>
+
+							<textarea class="form-control" id="figure-image-html"><figure class="figure-image">
+	<img src="https://unsplash.it/960/540?image=996" class="image" alt="This is an image from Unsplash" title="This is an image from Unsplash">
+	<figcaption>This is an image from Unsplash</figcaption>
+</figure></textarea>
+
+
+						</section>
 					</div><!-- row -->
 
 
