update to text styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<body>
 
-			<nav class="navbar navbar-toggleable-md navbar-light">
+			<nav class="navbar navbar-toggleable-md navbar-inverse">
 				<div class="container">
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
 
 				<a class="navbar-brand" href="#"> <svg class="logo" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 			<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-					<path d="M8.011,6.215 C6.3,6.206 4.151,7.133 2.512,8.772 C1.887,9.397 1.336,10.127 0.911,10.946 C2.39,9.827 3.968,9.476 5.814,10.512 C6.358,9.075 7.084,7.612 8.011,6.215 L8.011,6.215 Z M17.796,15.988 C16.28,16.979 14.789,17.694 13.499,18.198 C14.535,20.046 14.185,21.622 13.065,23.1 C13.884,22.676 14.614,22.125 15.24,21.498 C16.884,19.856 17.812,17.702 17.796,15.988 L17.796,15.988 Z M23.948,0.042 C23.536,0.014 23.132,-1.87350135e-16 22.735,-1.87350135e-16 C14.133,-1.87350135e-16 9.237,6.558 7.455,11.833 L12.183,16.562 C17.611,14.616 24,9.901 24,1.39 L24,1.333 C23.998,0.913 23.981,0.482 23.948,0.042 L23.948,0.042 Z M14.06,9.952 C13.669,9.561 13.669,8.929 14.06,8.538 C14.451,8.147 15.083,8.147 15.474,8.538 C15.865,8.929 15.865,9.561 15.474,9.952 C15.083,10.343 14.45,10.342 14.06,9.952 Z M16.888,7.124 C16.107,6.344 16.107,5.077 16.888,4.296 C17.669,3.515 18.936,3.515 19.716,4.296 C20.497,5.077 20.497,6.343 19.716,7.124 C18.935,7.905 17.669,7.905 16.888,7.124 Z M10.354,17.562 C8.862,21.372 4.551,23.77 3.55271368e-15,24 C0.219,19.711 2.657,15.324 6.64,13.847 L7.445,14.653 C3.114,17.408 2.792,19.999 2.78,21.228 C4.048,21.213 6.834,20.884 9.558,16.764 L10.354,17.562 L10.354,17.562 Z" id="Shape" fill="#674172" fill-rule="nonzero"></path>
+					<path d="M8.011,6.215 C6.3,6.206 4.151,7.133 2.512,8.772 C1.887,9.397 1.336,10.127 0.911,10.946 C2.39,9.827 3.968,9.476 5.814,10.512 C6.358,9.075 7.084,7.612 8.011,6.215 L8.011,6.215 Z M17.796,15.988 C16.28,16.979 14.789,17.694 13.499,18.198 C14.535,20.046 14.185,21.622 13.065,23.1 C13.884,22.676 14.614,22.125 15.24,21.498 C16.884,19.856 17.812,17.702 17.796,15.988 L17.796,15.988 Z M23.948,0.042 C23.536,0.014 23.132,-1.87350135e-16 22.735,-1.87350135e-16 C14.133,-1.87350135e-16 9.237,6.558 7.455,11.833 L12.183,16.562 C17.611,14.616 24,9.901 24,1.39 L24,1.333 C23.998,0.913 23.981,0.482 23.948,0.042 L23.948,0.042 Z M14.06,9.952 C13.669,9.561 13.669,8.929 14.06,8.538 C14.451,8.147 15.083,8.147 15.474,8.538 C15.865,8.929 15.865,9.561 15.474,9.952 C15.083,10.343 14.45,10.342 14.06,9.952 Z M16.888,7.124 C16.107,6.344 16.107,5.077 16.888,4.296 C17.669,3.515 18.936,3.515 19.716,4.296 C20.497,5.077 20.497,6.343 19.716,7.124 C18.935,7.905 17.669,7.905 16.888,7.124 Z M10.354,17.562 C8.862,21.372 4.551,23.77 3.55271368e-15,24 C0.219,19.711 2.657,15.324 6.64,13.847 L7.445,14.653 C3.114,17.408 2.792,19.999 2.78,21.228 C4.048,21.213 6.834,20.884 9.558,16.764 L10.354,17.562 L10.354,17.562 Z" id="Shape" fill="#FFF" fill-rule="nonzero"></path>
 			</g>
 	</svg></a>
 
@@ -48,15 +48,7 @@
 				</div><!-- container -->
 			</nav><!-- navbar -->
 
-			<header id="head" class="page-head container-fluid">
-				<div class="container">
-
-					<h1>Hamiltron.</h1>
-
-				</div><!-- container -->
-			</header><!-- container-fluid -->
-
-
+			<br>
 
 			<div id="main" class="container-fluid">
 				<div class="container">
