Update to nav links

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
 							<a class="nav-link" href="https://mail.google.com" target="_blank">Gmail</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="http://www.facebook.com" target="_blank">FB</a>
+							<a class="nav-link" href="http://www.gizmodo.com" target="_blank">Giz</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="http://www.gizmodo.com" target="_blank">Gizmodo</a>
+							<a class="nav-link" href="http://www.huffpost.com" target="_blank">Huff</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://boston.craigslist.org/" target="_blank">Craigs</a>
+						</li>
+
 					</ul>
 				</div>
 
