Added REM Calculator!
Added REM Calculator!

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                 <a href="http://fontawesome.io/icons/" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
                 <a href="http://www.cssfontstack.com/" class="list-group-item list-group-item-action" target="_blank">CSS Font Stacks</a>
 								<a href="https://fonts.google.com/" class="list-group-item list-group-item-action" target="_blank">Google Fonts</a>
+								<a href="https://offroadcode.com/rem-calculator/" class="list-group-item list-group-item-action" target="_blank">REM Calculator!</a>
+
               </div>
 
 						</section><!-- column -->
