Added Codeine Link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="https://boston.craigslist.org/" target="_blank">Craigs</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://codepen.io/hamiltopia/pens/public/" target="_blank">Codepen</a>
+						</li>
 
 					</ul>
 				</div>
