--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
               <div class="list-group">
                 <a href="http://codepen.io/hamiltopia/full/BQQRyB/" class="list-group-item list-group-item-action" target="_blank">Front End Palette</a>
                 <a href="http://codepen.io/hamiltopia/pen/rLoAmV" class="list-group-item list-group-item-action" target="_blank">Vars</a>
-                <a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Colors</a>
+                <a href="https://coolors.co/" class="list-group-item list-group-item-action" target="_blank">Coolors Generator</a>
+								<a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Flat Palette</a>
 								<a href="https://uigradients.com" class="list-group-item list-group-item-action" target="_blank">UIGraidents</a>
 								<a href="http://www.cssmatic.com/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Graident Generator</a>
 								<a href="http://css3generator.com/" class="list-group-item list-group-item-action" target="_blank">CSS3 Generator</a>
