update to Font Awesome

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<h4>Font Tools</h4>
               <div class="list-group">
                 <a href="https://v4-alpha.getbootstrap.com/content/typography/" class="list-group-item list-group-item-action" target="_blank">BS4 Typography</a>
-                <a href="http://fontawesome.io/icons/" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
+                <a href="https://fontawesome.com/icons?d=gallery" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
                 <a href="http://www.cssfontstack.com/" class="list-group-item list-group-item-action" target="_blank">CSS Font Stacks</a>
 								<a href="https://fonts.google.com/" class="list-group-item list-group-item-action" target="_blank">Google Fonts</a>
 								<a href="https://offroadcode.com/rem-calculator/" class="list-group-item list-group-item-action" target="_blank">REM Calculator!</a>
