--- a/index.html
+++ b/index.html
@@ -68,13 +68,11 @@
               <div class="list-group">
                 <a href="http://codepen.io/hamiltopia/full/BQQRyB/" class="list-group-item list-group-item-action" target="_blank">Front End Palette</a>
                 <a href="http://codepen.io/hamiltopia/pen/rLoAmV" class="list-group-item list-group-item-action" target="_blank">Vars</a>
-                <a href="https://coolors.co/" class="list-group-item list-group-item-action" target="_blank">Coolors Generator</a>
-								<a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Flat Palette</a>
-								<a href="https://uigradients.com" class="list-group-item list-group-item-action" target="_blank">UIGraidents</a>
-								<a href="http://www.cssmatic.com/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Graident Generator</a>
-								<a href="http://css3generator.com/" class="list-group-item list-group-item-action" target="_blank">CSS3 Generator</a>
 								<a href="http://www.cssarrowplease.com/" class="list-group-item list-group-item-action" target="_blank">CSS Arrow Please!</a>
               </div>
+
+							<h4>This Bear</h4>
+							<blockquote class="imgur-embed-pub" lang="en" data-id="BMSd5JQ"><a href="//imgur.com/BMSd5JQ">Grizzly Bear poo smells like pepper spray and has whistles in it</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 
 						</section><!-- column -->
@@ -87,6 +85,19 @@
                 <a href="http://www.cssfontstack.com/" class="list-group-item list-group-item-action" target="_blank">CSS Font Stacks</a>
 								<a href="https://fonts.google.com/" class="list-group-item list-group-item-action" target="_blank">Google Fonts</a>
 								<a href="https://offroadcode.com/rem-calculator/" class="list-group-item list-group-item-action" target="_blank">REM Calculator!</a>
+              </div>
+
+							<br>
+
+							<h4>Colors</h4>
+              <div class="list-group">
+                <a href="hhttps://material.io/guidelines/style/color.html#" class="list-group-item list-group-item-action" target="_blank">Material Color Style</a>
+								<a href="https://coolors.co/" class="list-group-item list-group-item-action" target="_blank">Coolors Generator</a>
+								<a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Flat Palette</a>
+								<a href="https://uigradients.com" class="list-group-item list-group-item-action" target="_blank">UIGraidents</a>
+								<a href="http://www.cssmatic.com/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Graident Generator</a>
+								<a href="http://css3generator.com/" class="list-group-item list-group-item-action" target="_blank">CSS3 Generator</a>
+
               </div>
 
 						</section><!-- column -->
